--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           </div>
         </div>
 
-        <iframe src="http://map.subreel.ru:20401" width="1200" height="660" scrolling="auto"> </iframe>
+        <iframe src="https://map.subreel.ru:20401" width="1200" height="660" scrolling="auto"> </iframe>
 
           </div>
         </div>
